# kaggle-aas-private-eval-proxy

./: .gitignore  LICENSE  Makefile  README.md  candidates.sample.jsonl  env.example  pyproject.toml
.github/: CODEOWNERS
notebooks/: kaggle-aas-private-eval-proxy.py  kernel-metadata.gpu.json  kernel-metadata.json
private_eval_proxy/: __init__.py  _sdk.py  aggregate.py  backends.py  cost.py  models.py  private_guard.py  private_judge.py  runner.py  scoring_v2.py
tests/: test_judge_verdict.py  test_smoke.py
